--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 /* Remove default margin */
 * {
-    font-family: 'sans-serif', 'Roboto';
+    font-family: 'Baloo2', 'sans-serif', 'Roboto';
     margin: 0;
 }
 
@@ -35,7 +35,7 @@ body {
     color: white;
 }
 
-#nav-pane-left {
+#nav-pane {
     height: 100vh;
     width: 15%;
     position: fixed;
@@ -43,9 +43,7 @@ body {
     left: 0;
     display: flex;
     flex-direction: column;
-    gap: 20px;
     text-align: left;
-    padding-left: 50px;
     padding-top: 50px;
     margin-top: 100px;
     border-right: 2px solid rgb(131, 131, 131);
@@ -74,8 +72,26 @@ main {
     height: calc(100vh - 100px);
 }
 
-#heading-banner > h1 {
+#heading-banner {
     font-family: "Baloo2";
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 60px;
+}
+
+#todo-header {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+#todo-icon {
+    max-height: 40px;
+}
+
+#user-icon {
+    max-width: 50px;
 }
 
 #content {
@@ -83,21 +99,32 @@ main {
 }
 
 #new-task {
-    text-decoration: none;
-}
-
-#new-task-div {
     position: relative;
     top:  20px;
     left: 92%;
-    color: black;
     width: 100px;
     padding: 5px;
-    border-radius: 10px;
     background-color: #ffffff;
     text-align: center;
+    border: none;
+    border-radius: 10px;
 }
 
-#new-task:hover {
-    color: #000000;
+.nav-header {
+    width: 100%;
+    font-size: 16px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    padding: 8px 40px;
+    border-radius: 5px;
+}
+
+.nav-header:hover {
+    background-color: #424242;
+}
+
+.nav-icon {
+    max-height: 16px;
+    max-width: 20px;
 }
