--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,9 @@
 
 :root {
     --font-color: #ffffff;
-    --bg-color: #000000;
+    --bg-color: #020105;
+    --bg-color-light: #41229e;
+    --bg-color2: #613ad6;
 }
 
 body {
@@ -46,8 +48,7 @@ body {
     text-align: left;
     padding-top: 50px;
     margin-top: 100px;
-    border-right: 2px solid rgb(131, 131, 131);
-    box-shadow: 2px 0 5px rgb(153, 153, 153);
+    border-right: 1px solid #ffffff3b;
 }
 
 h4, ul {
@@ -60,8 +61,7 @@ header {
     left: 0;
     width: 100%;
     height: 100px;
-    border-bottom: 2px solid rgb(131, 131, 131);
-    box-shadow: 2px 0 5px rgb(153, 153, 153);
+    border-bottom: 1px solid #ffffff3b;
     display: flex;
     align-items: center;
     padding: 0 40px;
@@ -77,21 +77,18 @@ main {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 0 60px;
 }
 
 #todo-header {
+    font-size: 20px;
     display: flex;
-    gap: 10px;
+    gap: 15px;
     align-items: center;
 }
 
-#todo-icon {
-    max-height: 40px;
-}
-
-#user-icon {
-    max-width: 50px;
+.logo {
+    width: 60px;
+    height: 60px;
 }
 
 #content {
@@ -110,6 +107,12 @@ main {
     border-radius: 10px;
 }
 
+#new-task:hover {
+    cursor: pointer;
+    color: white;
+    background-color: var(--bg-color-light);
+}
+
 .nav-header {
     width: 100%;
     font-size: 16px;
@@ -121,10 +124,18 @@ main {
 }
 
 .nav-header:hover {
-    background-color: #424242;
+    background-color: var(--bg-color-light);
+    cursor: pointer;
 }
 
 .nav-icon {
-    max-height: 16px;
+    max-height: 20px;
     max-width: 20px;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+#add-icon {
+    position: relative;
+    left: 100px;
 }
