--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@
 
 :root {
     --font-color: #ffffff;
-    --bg-color: #020105;
+    --bg-color: #030208;
     --bg-color-light: #41229e;
     --bg-color2: #613ad6;
 }
@@ -34,22 +34,59 @@ body {
     background-color: var(--bg-color);
     margin: 0;
     padding: 0;
+    display: grid;
+    grid-template-columns: auto 1fr;
 }
 
 #sidebar {
-    width: 15vw;
+    width: 300px;
     height: 100vh;
-    border-right: 1px solid #696969;
-    padding-top: 50px;
+    border-right: 1px solid #505050;
     display: flex;
     flex-direction: column;
     gap: 40px;
+    position: sticky;
+    top: 0;
 }
 
 #sidebar > ul {
+    list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    width: 100%;
+    font-family: "Poppins";
+    font-size: 16px;
+    padding: 0;
+}
+
+.list-item > a, 
+.list-item > button {
+    width: 100%;
+    padding: 1em 0 1em 3em;
+}
+
+.list-item > a:hover, 
+.list-item > button:hover {
+    background-color: var(--bg-color-light);
+    border-radius: 10px;
+}
+
+#sidebar a, 
+#sidebar .dropdown-btn, 
+#sidebar .icon {
+    border-radius: 0.5em;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+.dropdown-btn {
+    background: none;
+    border: none;
+    padding: 0%;
+    font-family: "Poppins";
+    font-size: 16px;
 }
 
 #logo-div {
@@ -60,6 +97,7 @@ body {
     padding-left: 40px;
     font-family: 'Baloo2';
     font-size: 16px;
+    margin-top: 30px;
 }
 
 #logo-icon {
@@ -70,41 +108,26 @@ body {
     max-width: 20px;
 }
 
-ul {
-    list-style-type: none;
-    width: 100%;
-    padding: 0%;
-}
-
 .list-item {
     width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    padding-left: 40px;
 }
 
-.list-item > a {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    text-decoration: none;
-    font-family: "Poppins";
+.sub-list {
+    padding-left: 6em;
     font-size: 16px;
+    list-style: none;
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: 300ms ease-in-out;
+
+    > div {
+        overflow: hidden;
+    }
 }
 
-.dropdown-btn {
-    width: 100%;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    font-family: "Poppins";
-    font-size: 16px;
-    padding: 0%;
+.sub-list.show {
+    grid-template-rows: 1fr;
 }
 
-.dropdown-btn:hover {
-    background-color: var(--bg-color-light);
+.sub-list>li {
 }
