--- a/src/styles.css
+++ b/src/styles.css
@@ -99,7 +99,7 @@ body {
     text-decoration: none;
     display: flex;
     align-items: center;
-    gap: 1em;
+    gap: 0.75em;
 }
 
 .dropdown-btn {
@@ -222,13 +222,13 @@ input[type="text"] {
 .project {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding-right: 30px;
 }
 
 .project > img {
     max-height: 16px;
     opacity: 0;
+    justify-self: flex-end;
 }
 
 .project:hover {
@@ -238,3 +238,12 @@ input[type="text"] {
     }
 }
 
+.add-fav-icon {
+    position: fixed;
+    left: 13em;
+}
+
+.remove-icon {
+    position: fixed;
+    left: 15em;
+}
