--- a/src/styles.css
+++ b/src/styles.css
@@ -134,7 +134,6 @@ body {
 }
 
 .sub-list {
-    margin-top: 10px;
     padding-left: 5.5em;
     list-style: none;
     display: grid;
@@ -216,7 +215,12 @@ input[type="text"] {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.85);
-    z-index: 2;
+    z-index: 4;
+}
+
+#overlay.active {
+    display: block;
+    pointer-events: none;
 }
     
 .project {
