--- a/src/styles.css
+++ b/src/styles.css
@@ -263,3 +263,29 @@ input[type="text"] {
     position: fixed;
     left: 34em;
 }
+
+#task-list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "poppins";
+}
+
+#add-task-icon {
+    max-width: 100px;
+    padding: 10px;
+}
+
+#add-task-icon:hover {
+    background-color: #242424;
+    border-radius: 10px;
+}
+
+#empty-task-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
