--- a/src/styles.css
+++ b/src/styles.css
@@ -46,12 +46,19 @@ body {
 #content {
     width: 70vw;
     height: 80vh;
-    display: grid;
-    grid-template-columns: auto 1fr;
+    display: flex;
+
+    /* grid-template-columns: auto 1fr; */
     background-color: var(--bg-color2);
     border: 1px solid #505050;
     border-radius: 20px;
     box-shadow: 10px 10px 50px #000000;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 #sidebar {
@@ -269,11 +276,16 @@ input {
 #task-list {
     font-family: "poppins";
     margin: 40px 0;
-    height: calc(100% - 80px);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1em;
+    overflow: auto;
+}
+
+#task-list::-webkit-scrollbar {
+    display: none;
 }
 
 #task-list > * {
@@ -325,8 +337,9 @@ input {
 .task {
     font-family: "Poppins";
     width: 90%;
-    height: 80px;
-    padding: 0 40px;
+    max-width: 100%;
+    min-width: 80px;
+    padding: 20px 40px;
     border: 1px solid #505050;
     border-radius: 10px;
     display: flex;
